@@ -355,9 +355,11 @@
      * used when opening a SCU connection from Orthanc to this remote
      * modality. By default, DICOM TLS is not enabled.
      *
-     * The "LocalAet" allows to overwrite the global "DicomAet"
-     * configuration option in order to specify another AET for
-     * Orthanc when initiating an SCU to this very specific modality.
+     * The "LocalAet" option allows one to overwrite the global
+     * "DicomAet" configuration option in order to specify another AET
+     * for Orthanc when initiating an SCU to this very specific
+     * modality. Similarly, "Timeout" allows one to overwrite the
+     * global value "DicomScuTimeout" on a per-modality basis.
      **/
     //"untrusted" : {
     //  "AET" : "ORTHANC",
@@ -373,6 +375,7 @@
     //  "AllowTranscoding" : true,         // new in 1.7.0
     //  "UseDicomTls" : false              // new in 1.9.0
     //  "LocalAet" : "HELLO"               // new in 1.9.0
+    //  "Timeout" : 60                     // new in 1.9.1
     //}
   },
 
